@startuml

title __CONFIGURATIONS's Class Diagram__\n

  namespace org.simonworks.projects.configurations {
    class org.simonworks.projects.configurations.ClasspathPropertiesFileConfiguration {
        + ClasspathPropertiesFileConfiguration()
        + openInputStream()
    }
  }
  

  namespace org.simonworks.projects.configurations {
    interface org.simonworks.projects.configurations.Configuration {
        {abstract} + containsConfig()
        {abstract} + get()
        + getBoolean()
        + getDouble()
        + getInt()
        + getString()
    }
  }
  

  namespace org.simonworks.projects.configurations {
    class org.simonworks.projects.configurations.ConfigurationException {
        + ConfigurationException()
    }
  }
  

  namespace org.simonworks.projects.configurations {
    class org.simonworks.projects.configurations.ExernalPropertyFileConfiguration {
        + ExernalPropertyFileConfiguration()
        + openInputStream()
    }
  }
  

  namespace org.simonworks.projects.configurations {
    abstract class org.simonworks.projects.configurations.PropertiesFileConfiguration {
        {static} - LOGGER : Logger
        - properties : Properties
        + PropertiesFileConfiguration()
        + PropertiesFileConfiguration()
        + containsConfig()
        + get()
        {abstract} + openInputStream()
    }
  }
  

  org.simonworks.projects.configurations.ClasspathPropertiesFileConfiguration -up-|> org.simonworks.projects.configurations.PropertiesFileConfiguration
  org.simonworks.projects.configurations.ExernalPropertyFileConfiguration -up-|> org.simonworks.projects.configurations.PropertiesFileConfiguration
  org.simonworks.projects.configurations.PropertiesFileConfiguration .up.|> org.simonworks.projects.configurations.Configuration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
